Исправил оставшуюся ошибку 5, начал работу над "командой"

--- a/index.html
+++ b/index.html
@@ -101,13 +101,9 @@
                             </svg>
                         </div>
                         <div class="advantages__content">
-                            <div class="advantages__title">
-                                <h3>Полезно</h3>
-                            </div>
-                            <div class="advantages__description">
-                                <p>Натуральность - ключевое качество нашей продукции. Мы
-                                    используем только природные ингредиенты.</p>
-                            </div>
+                            <h3>Полезно</h3>
+                            <p>Натуральность - ключевое качество нашей продукции. Мы
+                                используем только природные ингредиенты.</p>
                         </div>
                     </li>
                     <li class="advantages__snippet">
@@ -117,13 +113,9 @@
                             </svg>
                         </div>
                         <div class="advantages__content">
-                            <div class="advantages__title">
-                                <h3>Вкусно</h3>
-                            </div>
-                            <div class="advantages__description">
-                                <p>Нежный, ненавязчивый, изысканный – так клиенты описывают
-                                    вкусовые качества наших батончиков.</p>
-                            </div>
+                            <h3>Вкусно</h3>
+                            <p>Нежный, ненавязчивый, изысканный – так клиенты описывают
+                                вкусовые качества наших батончиков.</p>
                         </div>
                     </li>
                     <li class="advantages__snippet">
@@ -133,13 +125,9 @@
                             </svg>
                         </div>
                         <div class="advantages__content">
-                            <div class="advantages__title">
-                                <h3>Питательно</h3>
-                            </div>
-                            <div class="advantages__description">
-                                <p>Высокое содержание качественного белка, а также всех
-                                    необходимых витаминов и минералов.</p>
-                            </div>
+                            <h3>Питательно</h3>
+                            <p>Высокое содержание качественного белка, а также всех
+                                необходимых витаминов и минералов.</p>
                         </div>
                     </li>
                 </ul>
@@ -211,6 +199,45 @@
                 </ul>
             </li>
         </section>
+        <section class="team">
+            <div class="container">
+                <h2 class="title team__title">команда</h2>
+                <ul class="accordeon">
+                    <li class="accordeon__item">
+                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
+                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
+                        <div class="accordeon__drop-down">
+                            <h4 class="accordeon__worker-post">Оператор</h4>
+                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        </div>
+                    </li>
+                    <li class="accordeon__item">
+                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
+                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
+                        <div class="accordeon__drop-down">
+                            <h4 class="accordeon__worker-post">Оператор</h4>
+                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        </div>
+                    </li>
+                    <li class="accordeon__item">
+                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
+                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
+                        <div class="accordeon__drop-down">
+                            <h4 class="accordeon__worker-post">Оператор</h4>
+                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        </div>
+                    </li>
+                    <li class="accordeon__item">
+                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
+                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
+                        <div class="accordeon__drop-down">
+                            <h4 class="accordeon__worker-post">Оператор</h4>
+                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>        
         <ul class="fixed-menu">
             <li class="fixed-menu__item">
                 <a class="fixed-menu__dot fixed-menu__dot--active" href="#" aria-label="О нас"></a>
