Сделал секцию "Команда"

--- a/index.html
+++ b/index.html
@@ -197,47 +197,80 @@
                                 alt="миниатюра фотографии автора отзыва" class="reviews__small-pic"></button>
                     </li>
                 </ul>
-            </li>
+                </li>
         </section>
-        <section class="team">
+        <section class="section team">
             <div class="container">
                 <h2 class="title team__title">команда</h2>
                 <ul class="accordeon">
                     <li class="accordeon__item">
-                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
-                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
-                        <div class="accordeon__drop-down">
-                            <h4 class="accordeon__worker-post">Оператор</h4>
-                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        <img src="./img/content/team-Boris.jpg" alt="Фотография сотрудника" class="accordeon__pic">
+                        <div class="accordeon__collapsible ">
+                            <button class="accordeon__unfolder">
+                                <h3>Борис Федорович</h3>
+                                <svg class="accordeon__arrow-icon">
+                                    <use xlink:href="sprites/icon-sprite.svg#triangle-arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="accordeon__info">
+                                <h4>Главный технолог</h4>
+                                <p>Отвечает за вкусовые качества
+                                    и калорийность.</p>
+                            </div>
                         </div>
                     </li>
                     <li class="accordeon__item">
-                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
-                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
-                        <div class="accordeon__drop-down">
-                            <h4 class="accordeon__worker-post">Оператор</h4>
-                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        <img src="./img/content/team-Alla.jpg" alt="Фотография сотрудника" class="accordeon__pic">
+                        <div class="accordeon__collapsible ">
+                            <button class="accordeon__unfolder">
+                                <h3>Алла Иванова</h3>
+                                <svg class="accordeon__arrow-icon">
+                                    <use xlink:href="sprites/icon-sprite.svg#triangle-arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="accordeon__info">
+                                <h4>Специалист по упаковке</h4>
+                                <p>Автор запоминающегося стиля 
+                                    наших батончиков.
+                                    </p>
+                            </div>
                         </div>
                     </li>
                     <li class="accordeon__item">
-                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
-                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
-                        <div class="accordeon__drop-down">
-                            <h4 class="accordeon__worker-post">Оператор</h4>
-                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        <img src="./img/content/team-Kirill.jpg" alt="Фотография сотрудника" class="accordeon__pic">
+                        <div class="accordeon__collapsible accordeon__collapsible--active">
+                            <button class="accordeon__unfolder ">
+                                <h3>Кирилл Матросов</h3>
+                                <svg class="accordeon__arrow-icon">
+                                    <use xlink:href="sprites/icon-sprite.svg#triangle-arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="accordeon__info">
+                                <h4>Оператор</h4>
+                                <p>С радостью поможет подобрать батончики и оформить заказ.</p>
+                            </div>
                         </div>
                     </li>
                     <li class="accordeon__item">
-                        <img src="./img/content/team-Kirill.jpg" alt="Фотография Кирилла" class="accordeon__worker-pic">
-                        <h3 class="accordeon__worker-name">Кирилл Матросов</h3>
-                        <div class="accordeon__drop-down">
-                            <h4 class="accordeon__worker-post">Оператор</h4>
-                            <p class="accordeon__worker-info">С радостью поможет подобрать батончики и оформить заказ.</p>
+                        <img src="./img/content/team-Mila.jpg" alt="Фотография сотрудника" class="accordeon__pic">
+                        <div class="accordeon__collapsible ">
+                            <button class="accordeon__unfolder">
+                                <h3>Мила Рыжкова</h3>
+                                <svg class="accordeon__arrow-icon">
+                                    <use xlink:href="sprites/icon-sprite.svg#triangle-arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="accordeon__info">
+                                <h4>PR, маркетинг</h4>
+                                <p>По всем вопросам сотрудничества 
+                                    и рекламы писать только Миле. 
+                                    </p>
+                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
-        </section>        
+        </section>
         <ul class="fixed-menu">
             <li class="fixed-menu__item">
                 <a class="fixed-menu__dot fixed-menu__dot--active" href="#" aria-label="О нас"></a>
@@ -264,7 +297,7 @@
                 <a class="fixed-menu__dot" href="#" aria-label="О нас"></a>
             </li>
         </ul>
-    </li>
+        </li>
 </body>
 
 </html>
