--- a/index.html
+++ b/index.html
@@ -132,73 +132,6 @@
                     </li>
                 </ul>
         </section>
-        <section class="section reviews">
-            <div class="reviews__inner container">
-                <h2 class="title reviews__title">отзывы</h2>
-                <ul class="reviews__slider">
-                    <li class="review-snippet review-snippet--active">
-                        <img src="img/content/user-fem-brown.jpg" alt="user avatar" class="review-snippet__userpic">
-                        <div class="review-snippet__content  review-snippet--active">
-                            <span class="review-snippet__title">
-                                <h3>Лучший перекус</h3>
-                            </span>
-                            <p class="review-snippet__text">Я ем малыми порциями, но часто. Это повышает мою
-                                продуктивность в
-                                разы. В течение дня сижу за компьютером
-                                и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он
-                                всегда
-                                под рукой. Это приятно
-                                и удобно.</p>
-                            <span class="review-snippet__author">Алёна Хмельницкая</span>
-                        </div>
-                    </li>
-                    <li class="review-snippet">
-                        <img src="img/content/user-fem-ginger.jpg" alt="user avatar" class="review-snippet__usepic">
-                        <div class="review-snippet__content">
-                            <span class="review-snippet__title">
-                                <h3>Лучшие батончики премиум уровня</h3>
-                            </span>
-                            <p class="review-snippet__text">После тренировок всегда хочется быстро закинуться чем-то
-                                белковым, потому что до дома ещё нужно доехать. А кушать хочется. Протеиновые батончики
-                                всегда выручают в этом плане. Спасибо производителю за этот качественный и экологичный
-                                продукт.</p>
-                            <span class="review-snippet__author">Мария Орлова</span>
-                        </div>
-                    </li>
-                    <li class="review-snippet">
-                        <img src="img/content/user-male.jpg" alt="user avatar" class="review-snippet__usepic">
-                        <div class="review-snippet__content">
-                            <span class="review-snippet__title">
-                                <h3>Идеально подходят для спортсменов</h3>
-                            </span>
-                            <p class="review-snippet__text">Я ем малыми порциями, но часто. Это повышает мою
-                                продуктивность в
-                                разы. В течение дня сижу за компьютером
-                                и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он
-                                всегда
-                                под рукой. Это приятно
-                                и удобно.</p>
-                            <span class="review-snippet__author">Вадим Грачёв</span>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="reviews__switcher">
-                    <li class="reviews__switcher-item">
-                        <button type="button" class="reviews__switch-btn reviews__switch-btn--selected"><img
-                                src="img/content/user-fem-brown.jpg" alt="миниатюра фотографии автора отзыва"
-                                class="reviews__small-pic"></button>
-                    </li>
-                    <li class="reviews__switcher-item">
-                        <button type="button" class="reviews__switch-btn"><img src="img/content/user-fem-ginger.jpg"
-                                alt="миниатюра фотографии автора отзыва" class="reviews__small-pic"></button>
-                    </li>
-                    <li class="reviews__switcher-item">
-                        <button type="button" class="reviews__switch-btn"><img src="img/content/user-male.jpg"
-                                alt="миниатюра фотографии автора отзыва" class="reviews__small-pic"></button>
-                    </li>
-                </ul>
-                </li>
-        </section>
         <section class="section team">
             <div class="container">
                 <h2 class="title team__title">команда</h2>
@@ -270,6 +203,111 @@
                     </li>
                 </ul>
             </div>
+        </section>
+        <section class="section menu">
+            <h2 class="title title--white">меню</h2>
+            <ul class="accordeon-menu">
+                <li class="accordeon-menu__item-collapsible">
+                    <button class="accordeon-menu__unfolder" type="button">
+                        <h3>Батончики с молоком</h3>
+                    </button>
+                    <div class="accordeon-menu__info">
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <svg class="accordeon-menu__close-icon">
+                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                        </svg>
+                    </div>
+                </li>
+                <li class="accordeon-menu__item-collapsible">
+                    <button class="accordeon-menu__unfolder" type="button">
+                        <h3>Батончики с молоком</h3>
+                    </button>
+                    <div class="accordeon-menu__info">
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <svg class="accordeon-menu__close-icon">
+                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                        </svg>
+                    </div>
+                </li>
+                <li class="accordeon-menu__item-collapsible">
+                    <button class="accordeon-menu__unfolder" type="button">
+                        <h3>Батончики с молоком</h3>
+                    </button>
+                    <div class="accordeon-menu__info">
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <svg class="accordeon-menu__close-icon">
+                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                        </svg>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section class="section reviews">
+            <div class="reviews__inner container">
+                <h2 class="title reviews__title">отзывы</h2>
+                <ul class="reviews__slider">
+                    <li class="review-snippet review-snippet--active">
+                        <img src="img/content/user-fem-brown.jpg" alt="user avatar" class="review-snippet__userpic">
+                        <div class="review-snippet__content  review-snippet--active">
+                            <span class="review-snippet__title">
+                                <h3>Лучший перекус</h3>
+                            </span>
+                            <p class="review-snippet__text">Я ем малыми порциями, но часто. Это повышает мою
+                                продуктивность в
+                                разы. В течение дня сижу за компьютером
+                                и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он
+                                всегда
+                                под рукой. Это приятно
+                                и удобно.</p>
+                            <span class="review-snippet__author">Алёна Хмельницкая</span>
+                        </div>
+                    </li>
+                    <li class="review-snippet">
+                        <img src="img/content/user-fem-ginger.jpg" alt="user avatar" class="review-snippet__usepic">
+                        <div class="review-snippet__content">
+                            <span class="review-snippet__title">
+                                <h3>Лучшие батончики премиум уровня</h3>
+                            </span>
+                            <p class="review-snippet__text">После тренировок всегда хочется быстро закинуться чем-то
+                                белковым, потому что до дома ещё нужно доехать. А кушать хочется. Протеиновые батончики
+                                всегда выручают в этом плане. Спасибо производителю за этот качественный и экологичный
+                                продукт.</p>
+                            <span class="review-snippet__author">Мария Орлова</span>
+                        </div>
+                    </li>
+                    <li class="review-snippet">
+                        <img src="img/content/user-male.jpg" alt="user avatar" class="review-snippet__usepic">
+                        <div class="review-snippet__content">
+                            <span class="review-snippet__title">
+                                <h3>Идеально подходят для спортсменов</h3>
+                            </span>
+                            <p class="review-snippet__text">Я ем малыми порциями, но часто. Это повышает мою
+                                продуктивность в
+                                разы. В течение дня сижу за компьютером
+                                и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он
+                                всегда
+                                под рукой. Это приятно
+                                и удобно.</p>
+                            <span class="review-snippet__author">Вадим Грачёв</span>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="reviews__switcher">
+                    <li class="reviews__switcher-item">
+                        <button type="button" class="reviews__switch-btn reviews__switch-btn--selected"><img
+                                src="img/content/user-fem-brown.jpg" alt="миниатюра фотографии автора отзыва"
+                                class="reviews__small-pic"></button>
+                    </li>
+                    <li class="reviews__switcher-item">
+                        <button type="button" class="reviews__switch-btn"><img src="img/content/user-fem-ginger.jpg"
+                                alt="миниатюра фотографии автора отзыва" class="reviews__small-pic"></button>
+                    </li>
+                    <li class="reviews__switcher-item">
+                        <button type="button" class="reviews__switch-btn"><img src="img/content/user-male.jpg"
+                                alt="миниатюра фотографии автора отзыва" class="reviews__small-pic"></button>
+                    </li>
+                </ul>
+                </li>
         </section>
         <ul class="fixed-menu">
             <li class="fixed-menu__item">
