Фоны и структура в аккордеоне меню

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         <section class="section menu">
             <h2 class="title title--white">меню</h2>
             <ul class="accordeon-menu">
-                <li class="accordeon-menu__item-collapsible">
-                    <button class="accordeon-menu__unfolder" type="button">
+                <li class="accordeon-menu__item-collapsible accordeon-menu__item-collapsible--active">
+                    <button class="accordeon-menu__unfolder accordeon-menu__unfolder--bg--coconut" type="button">
                         <h3>Батончики с молоком</h3>
                     </button>
                     <div class="accordeon-menu__info">
@@ -219,8 +219,8 @@
                     </div>
                 </li>
                 <li class="accordeon-menu__item-collapsible">
-                    <button class="accordeon-menu__unfolder" type="button">
-                        <h3>Батончики с молоком</h3>
+                    <button class="accordeon-menu__unfolder accordeon-menu__unfolder--bg--honey" type="button">
+                        <h3>С мёдом и фруктами</h3>
                     </button>
                     <div class="accordeon-menu__info">
                         <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
@@ -230,8 +230,8 @@
                     </div>
                 </li>
                 <li class="accordeon-menu__item-collapsible">
-                    <button class="accordeon-menu__unfolder" type="button">
-                        <h3>Батончики с молоком</h3>
+                    <button class="accordeon-menu__unfolder accordeon-menu__unfolder--bg--berries" type="button">
+                        <h3>Дикие ягоды</h3>
                     </button>
                     <div class="accordeon-menu__info">
                         <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
