--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <a href="tel:88009039090" class="link phone-num">
+                        <a href="tel:88009039090" class="phone-num">
                             <svg class="phone-num__icon">
                                 <use xlink:href="sprites/icon-sprite.svg#phone"></use>
                             </svg>
@@ -213,9 +213,11 @@
                     </button>
                     <div class="accordeon-menu__info">
                         <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
-                        <svg class="accordeon-menu__close-icon">
-                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
-                        </svg>
+                        <button class="accordeon-menu__close-btn" type="button">
+                            <svg class="accordeon-menu__close-icon">
+                                <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                            </svg>
+                        </button>
                     </div>
                 </li>
                 <li class="accordeon-menu__item-collapsible">
@@ -224,9 +226,11 @@
                     </button>
                     <div class="accordeon-menu__info">
                         <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
-                        <svg class="accordeon-menu__close-icon">
-                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
-                        </svg>
+                        <button class="accordeon-menu__close-btn" type="button">
+                            <svg class="accordeon-menu__close-icon">
+                                <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                            </svg>
+                        </button>
                     </div>
                 </li>
                 <li class="accordeon-menu__item-collapsible">
@@ -235,9 +239,11 @@
                     </button>
                     <div class="accordeon-menu__info">
                         <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
-                        <svg class="accordeon-menu__close-icon">
-                            <use xlink:href="sprites/icon-sprite.svg#cross"></use>
-                        </svg>
+                        <button class="accordeon-menu__close-btn" type="button">
+                            <svg class="accordeon-menu__close-icon">
+                                <use xlink:href="sprites/icon-sprite.svg#cross"></use>
+                            </svg>
+                        </button>
                     </div>
                 </li>
             </ul>
@@ -309,6 +315,36 @@
                 </ul>
                 </li>
         </section>
+        <section class="section contacts">
+            <map name="map" class="map"></map>
+            <footer class="footer contacts__footer">
+                <div class="container footer__container">
+                    <div class="footer__info">
+                        <address>Москва, ул.Новый Арбат, д.31/12</address>
+                        <a href="tel:88009039090" class="phone-num phone-num--color--green">
+                            <svg class="phone-num__icon">
+                                <use xlink:href="sprites/icon-sprite.svg#phone"></use>
+                            </svg>
+                            8 800 903 90 90
+                        </a>
+                    </div>
+                    <div class="footer__social social">
+                        <svg class="social__icon">
+                            <use xlink:href="sprites/icon-sprite.svg#vk"></use>
+                        </svg>
+                        <svg class="social__icon">
+                            <use xlink:href="sprites/icon-sprite.svg#vk"></use>
+                        </svg>
+                        <svg class="social__icon">
+                            <use xlink:href="sprites/icon-sprite.svg#vk"></use>
+                        </svg>
+                        <svg class="social__icon">
+                            <use xlink:href="sprites/icon-sprite.svg#vk"></use>
+                        </svg>
+                    </div>
+                </div>
+            </footer>
+        </section>     
         <ul class="fixed-menu">
             <li class="fixed-menu__item">
                 <a class="fixed-menu__dot fixed-menu__dot--active" href="#" aria-label="О нас"></a>
@@ -337,5 +373,5 @@
         </ul>
         </li>
 </body>
-
+    
 </html>
